# newsletter

./: .env  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  configuration.yaml  docker-compose.yaml
.github/workflows/: ci.yaml  general.yml
.sqlx/: query-e8a1f46953a4482abf411d48316f1077543b5cfd963b9b02b8a7ec3eafa060eb.json
migrations/: 20231118141947_create_subscriptions_table.sql  20231126154940_make_status_not_null_in_subscriptions.sql
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: home.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/login/: post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscription_confirm.rs  subscriptions.rs
